fix feed alignment

--- a/qwikgame/static/css/qwik.css
+++ b/qwikgame/static/css/qwik.css
@@ -197,7 +197,7 @@ fieldset.disabled { background-color: #eeeeee; border: 0px solid #eeeeee; color:
 fieldset div { display:block; padding: 1em}
 h1 { align-items: center; color: black; display: flex; flex-direction: row; font-size: 1.13em; justify-content: start; text-align: left; margin: 0.3em; width: 100% }
 h2 { align-items: center; color: black; display: flex; flex-direction: row; font-size: 1.13em; justify-content: start; gap: 1em; margin: 3em 0 1em 0; text-align: left; }
-h2.show_group a { color: blue; text-decoration: underline; }
+h2.show_group a { color: blue; justify-content: space-between; text-decoration: underline; }
 h3 { align-items: center; color: black; display: flex; flex-direction: row; font-size: 1.13em; justify-content: space-between; gap: 2em; margin: 2em 0 1em 0; text-align: left; margin: 1.5em 0 0.8em 0; }
 h3 span.caption { align-self: flex-start; font-size: 0.8em; margin-left: 3em }
 h4 { color: black; text-align: left }
